--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
     <link rel="stylesheet" href="style.css" />
     <title>Yahtzee Dice Game</title>
   </head>
-  <body>
+  <body class="background">
     <div class="wrapper clearfix">
       <div class="player-0-panel active">
         <div class="player-name" id="name-0">Player 1</div>
-        <div class="player-score" id="score-0">43</div>
+        <div class="player-score" id="score-0">0</div>
         <div class="player-current-box">
           <div class="player-current-label">Current</div>
-          <div class="player-current-score" id="current-0">11</div>
+          <div class="player-current-score" id="current-0">0</div>
         </div>
       </div>
 
       <div class="player-1-panel">
         <div class="player-name" id="name-1">Player 2</div>
-        <div class="player-score" id="score-1">72</div>
+        <div class="player-score" id="score-1">0</div>
         <div class="player-current-box">
           <div class="player-current-label">Current</div>
           <div class="player-current-score" id="current-1">0</div>
@@ -47,8 +47,8 @@
 
       <input type="text" placeholder="Final score" class="final-score" />
 
-      <img src="dice-5.png" alt="Dice" class="dice" id="dice-1" />
-      <img src="dice-5.png" alt="Dice" class="dice" id="dice-2/>
+      <img src="" alt="Dice" class="dice" id="dice-1" />
+      <img src="" alt="Dice" class="dice" id="dice-2" />
     </div>
 
     <script src="app.js"></script>
